# crucible

./: .gitignore  CHANGELOG.md  Cargo.toml  FINDINGS.md  Justfile  PLAN.md  README.md  TODO.md  flake.nix  package.nix  review-roles.md
.githooks/: pre-push
.github/workflows/: ci.yml
crates/crucible-cli/: Cargo.toml
crates/crucible-cli/src/: log_helpers.rs  main.rs
crates/crucible-cli/src/commands/: config.rs  consensus.rs  doctor.rs  hook.rs  mod.rs  prompt_eval.rs  review.rs  session.rs
crates/crucible-cli/src/tui/: mod.rs
crates/crucible-cli/tests/: bdd.rs
crates/crucible-cli/tests/features/: crucible_cli.feature
crates/libcrucible/: Cargo.toml
crates/libcrucible/src/: analysis.rs  artifacts.rs  config.rs  consensus.rs  lib.rs  plugin.rs  pr_review.rs  progress.rs  report.rs  task_pack.rs
crates/libcrucible/src/context/: docs.rs  history.rs  mod.rs  precheck.rs  reference.rs
crates/libcrucible/src/coordinator/: mod.rs
crates/libcrucible/src/plugins/: cli_agent.rs  mod.rs
crates/plugins/claude-code/: Cargo.toml
crates/plugins/claude-code/src/: lib.rs
docs/: book.toml  general-consensus.md  usage.md
docs/ideas/: 20260303.md
docs/specs/: brief.md  cli.md  cook.md  design.md  magpie_parity.md  roadmap.md
docs/src/: SUMMARY.md  architecture.md  configuration.md  installation.md  introduction.md  quickstart.md  roadmap.md  troubleshooting.md  workflow.md
docs/src/commands/: README.md  config.md  hook.md  review.md  session.md
