[package]
name = "crucible-cli"
version = "0.1.20"
edition.workspace = true
license.workspace = true

[[bin]]
name = "crucible"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tempfile.workspace = true
which.workspace = true
git2.workspace = true
uuid.workspace = true

libcrucible = { path = "../libcrucible" }

[[test]]
name = "bdd"
path = "tests/bdd.rs"
harness = false

[dev-dependencies]
cucumber.workspace = true
assert_cmd.workspace = true
futures.workspace = true
tempfile.workspace = true
libc = "0.2"
