[package]
name = "libcrucible"
version = "0.1.27"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
async-trait.workspace = true
git2.workspace = true
tree-sitter.workspace = true
uuid.workspace = true
regex.workspace = true
glob.workspace = true
chrono.workspace = true
walkdir.workspace = true
futures.workspace = true
which.workspace = true

# External grammars

tree-sitter-rust = "0.23"

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
